--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Installing
 
 Copy folder contents into:
 
-  $HOME/.local/share/gnome-shell/extensions/desktop-scroller@thoemy-github.com/
+  $HOME/.local/share/gnome-shell/extensions/desktop-scroller@brorlandi/
 
 and restart gnome-shell. Don't forget to enable it.
 
